creacion de mis cursos

--- a/SistemaAC/Views/Inscripciones/Index.cshtml
+++ b/SistemaAC/Views/Inscripciones/Index.cshtml
@@ -2,9 +2,7 @@
 @{
     ViewData["Title"] = "Index";
 }
-
 <h2>Inscripciones</h2>
-
 <div class="form-group">
     <div class="row">
         <table class="table">
@@ -14,7 +12,7 @@
                         <input type="text" name="Estudiante" id="Estudiante" placeholder="Estudiante" class="form-control" />
                     </td>
                     <td>
-                        <button type="button" class="btn btn-primary">Seleccionar</button>
+                        <button type="button" class="btn btn-primary"  data-toggle="modal" data-target="#modalEstudiante">Seleccionar</button>
                     </td>
                 </tr>
             </tbody>
@@ -24,18 +22,33 @@
                 <tr>
                     <td>Curso:</td>
                     <td>
-                        <input type="text" name="Estudiante" id="Estudiante" placeholder="Estudiante" class="form-control" />
+                        <input type="text" name="InscripcionCurso" id="InscripcionCurso" placeholder="Curso" class="form-control" />
                     </td>
                     <td>
-                        <button type="button" class="btn btn-primary">Seleccionar</button>
+                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalCurso">Seleccionar</button>
                     </td>
                     <td>Grado:</td>
                     <td>
-                        <input type="number" name="name" value="" />
+                        <input type="number" name="Grado" id="Grado" min="1" />
                     </td>
                     <td>Costo:</td>
                     <td>
-                        <input id="CostoEstudiante" name="CostoEstudiante" placeholder="Costo" class="form-control" />
+                        <input id="Costo" name="Costo" placeholder="Costo" class="form-control" />
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <table>
+            <tbody>
+                <tr>
+                    <td>
+                        <button type="button" onclick="addCursos()" class="btn btn-success">Agregar</button>
+                        <button type="button" onclick="restablecer()" class="btn btn-warning">Cancelar</button>
+                        <button type="button" onclick="guardarCursos()" class="btn btn-primary">Guardar</button>
+                    </td>
+                    <td>
+                        <label id="mensajeEstudiante" class="col-sm-2 control-label">Total:</label>
+                        <label id="pagosCursos" class="col-sm-2 control-label"></label>
                     </td>
                 </tr>
             </tbody>
@@ -51,9 +64,76 @@
                     <th>Opciones</th>
                 </tr>
             </thead>
-            <tbody id="resultSearch"></tbody>
+            <tbody id="resultCursos"></tbody>
         </table>
+    </div>
+</div>
+<!-- Modal -->
+<div class="modal fade" id="modalEstudiante" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Seleccionar estudiante</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <input type="text" name="filtrar" id="filtrar" placeholder="Estudiante" onkeyup="filtrarEstudianteInscripcion()" class="form-control" />
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Seleccionar</th>
+                            <th>Apellido nombre</th>
+                            <th>Docuemnto</th>
+                            <th>Email</th>
+                            <th>Telefono</th>
+                        </tr>
+                    </thead>
+                    <tbody id="resultSearchEstudiante"></tbody>   
+                    
+                </table>
+            </div>
+            <label id="mensajeEstudiante" class="col-md-2 control-label"></label>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                <button type="button" onclick="getEstudiante()" class="btn btn-primary">Aceptar</button>
+            </div>
+        </div>
+    </div>
+</div>
 
+<div class="modal fade" id="modalCurso" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Seleccionar un curso</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <input type="text" name="filtrarCurso" id="filtrarCurso" placeholder="Curso" onkeyup="filtrarCursoInscripcion()" class="form-control" />
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Seleccionar</th>
+                            <th>Nombre</th>
+                            <th>Categoria</th>
+                            <th>Credito</th>
+                            <th>Horas</th>
+                            <th>Costo</th>
+                        </tr>
+                    </thead>
+                    <tbody id="resultSearchCurso"></tbody>
 
+                </table>
+            </div>
+            <label id="mensajeCurso" class="col-md-2 control-label"></label>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                <button type="button" onclick="getCurso()" class="btn btn-primary">Aceptar</button>
+            </div>
+        </div>
     </div>
 </div>
