--- a/SistemaAC/Views/Shared/_Layout.cshtml
+++ b/SistemaAC/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
                     <li><a asp-area="" asp-controller="Cursos" asp-action="Index">Cursos</a></li>
                     <li><a asp-area="" asp-controller="Estudiantes" asp-action="Index">Estudiantes</a></li>
                     <li><a asp-area="" asp-controller="Instructores" asp-action="Index">Instructores</a></li>
-                    <li><a asp-area="" asp-controller="Inscripciones" asp-action="Index">Inscripciones</a></li>
+                    <li><a asp-area="" asp-controller="MisCursos" asp-action="Index">Inscripciones</a></li>
 
 
 
@@ -72,6 +72,7 @@
         <script src="~/js/Estudiantes.js" asp-append-version="true"></script>
         <script src="~/js/Instructores.js" asp-append-version="true"></script>
         <script src="~/js/Inscripciones.js" asp-append-version="true"></script>
+        <script src="~/js/MisCursos.js" asp-append-version="true"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
 
 
