--- a/SistemaAC/Views/Shared/_Layout.cshtml
+++ b/SistemaAC/Views/Shared/_Layout.cshtml
@@ -66,7 +66,7 @@
         <script src="https://cdn.datatables.net/1.10.18/js/jquery.dataTables.min.js"></script>
 
         <!--# Data table -->
-
+        <script src="~/js/typeahead.js" asp-append-version="true"></script>
         <script src="~/js/Categorias.js" asp-append-version="true"></script>
         <script src="~/js/Cursos.js" asp-append-version="true"></script>
         <script src="~/js/Estudiantes.js" asp-append-version="true"></script>
