se empiezan a crear los reportes

--- a/SistemaAC/Views/Shared/_Layout.cshtml
+++ b/SistemaAC/Views/Shared/_Layout.cshtml
@@ -41,6 +41,8 @@
                     <li><a asp-area="" asp-controller="Estudiantes" asp-action="Index">Estudiantes</a></li>
                     <li><a asp-area="" asp-controller="Instructores" asp-action="Index">Instructores</a></li>
                     <li><a asp-area="" asp-controller="MisCursos" asp-action="Index">Inscripciones</a></li>
+                    <li><a asp-area="" asp-controller="Reports" asp-action="Index">Reportes</a></li>
+
 
 
 
